--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
 
-    <link rel="stylesheet" href="/styles.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
 
   <!-- BODY START -->
-  <body></body>
+  <body>
+    <div id="root"></div>
+  </body>
   <!-- BODY END -->
 </html>
 
