--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 
   <!-- BODY START -->
   <body>
+    <h1>Weather Check</h1>
+    <h2>Your current location</h2>
+    <h2 id="location"></h2>
     <div id="root"></div>
   </body>
   <!-- BODY END -->
