--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <h1>Weather Check</h1>
     <h2>Your current location</h2>
     <h2 id="location"></h2>
+    <h2 id="weather"></h2>
     <div id="root"></div>
   </body>
   <!-- BODY END -->
