weather info display, basic styling

--- a/index.html
+++ b/index.html
@@ -13,11 +13,23 @@
 
   <!-- BODY START -->
   <body>
-    <h1>Weather Check</h1>
-    <h2>Your current location</h2>
-    <h2 id="location"></h2>
-    <h2 id="weather"></h2>
-    <div id="root"></div>
+    <div class="header">
+      <h1>Weather Check</h1>
+    </div>
+    <div>
+      <h2>Your current location:</h2>
+      <h2 id="city"></h2>
+      <p id="location"></p>
+    </div>
+    <div>
+      <img id="weatherIcon" src="" />
+    </div>
+    <div>
+      <h2>Temperature:</h2>
+      <h2 id="temp"></h2>
+      <h2>Wind:</h2>
+      <h2 id="wind"></h2>
+    </div>
   </body>
   <!-- BODY END -->
 </html>
