fix wind speed, formatting

--- a/index.html
+++ b/index.html
@@ -18,17 +18,15 @@
     </div>
     <div>
       <h2>Your current location:</h2>
-      <h2 id="city"></h2>
-      <p id="location"></p>
+      <h1 id="city"></h1>
+      <h2 id="location"></h2>
     </div>
     <div>
       <img id="weatherIcon" src="" />
     </div>
     <div>
-      <h2>Temperature:</h2>
-      <h2 id="temp"></h2>
-      <h2>Wind:</h2>
-      <h2 id="wind"></h2>
+      <h2>Temperature: <span id="temp"></span> °C</h2>
+      <h2>Wind speed: <span id="wind"></span></h2>
     </div>
   </body>
   <!-- BODY END -->
