layout; alert user error 429 too many requests

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   <!-- BODY START -->
   <body>
     <div class="header">
-      <h1>Weather Check</h1>
+      <h1 class="title">Weather Check</h1>
     </div>
     <div>
-      <h2>Your current location:</h2>
+      <!--<h2>Your current location:</h2>-->
       <h1 id="city"></h1>
       <h2 id="location"></h2>
     </div>
@@ -25,8 +25,8 @@
       <img id="weatherIcon" src="" />
     </div>
     <div>
-      <h2>Temperature: <span id="temp"></span> °C</h2>
-      <h2>Wind speed: <span id="wind"></span></h2>
+      <h2 id="temp"></h2>
+      <h2 id="wind"></h2>
     </div>
   </body>
   <!-- BODY END -->
