styling, quicksand font

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-
+    <!-- Quicksand font import -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Quicksand:300,500"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles.css" />
   </head>
 
@@ -16,17 +20,18 @@
     <div class="header">
       <h1 class="title">Weather Check</h1>
     </div>
-    <div>
-      <!--<h2>Your current location:</h2>-->
-      <h1 id="city"></h1>
-      <h2 id="location"></h2>
-    </div>
-    <div>
-      <img id="weatherIcon" src="" />
-    </div>
-    <div>
-      <h2 id="temp"></h2>
-      <h2 id="wind"></h2>
+    <div class="box">
+      <div>
+        <h1 id="city"></h1>
+        <h2 id="location"></h2>
+      </div>
+      <div>
+        <img id="weatherIcon" src="" />
+      </div>
+      <div>
+        <h2 id="temp"></h2>
+        <h2 id="wind"></h2>
+      </div>
     </div>
   </body>
   <!-- BODY END -->
