comments & README Questions

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Coding Challenge</title>
+    <title>Coding Challenge Weather API</title>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <!-- Quicksand font import -->
+    <!-- Quicksand font-->
     <link
       href="https://fonts.googleapis.com/css?family=Quicksand:300,500"
       rel="stylesheet"
